Minor fixes needed